syntax = "proto3";

package com.loganalyzer;

// The Analyzer service definition.
service Analyzer {
  // Analyzes the log request
  rpc analyzeLog (AnalyzeRequest) returns (AnalyzeReply) {}
}

// The request message containing the time and dt.
message AnalyzeRequest {
  string time = 1;
  string dt = 2;
}

// The response message containing the message
message AnalyzeReply {
  string message = 1;
}
